<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_laguaca_degradado"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewPrincipal"
            android:layout_width="match_parent"
            android:layout_height="466dp"
            app:srcCompat="@drawable/gente_guaca" />

        <Button
            android:id="@+id/buttonJugarGuaca"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:layout_marginLeft="8dp"

            android:layout_marginRight="8dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/boton_guaca"
            android:text="@string/botonJugarGuaca"
            android:textColor="@color/ColorBoton"
            tools:text="Jugar La Guaca" />

        <Button
            android:id="@+id/buttonExplorarMapa3d"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"

            android:layout_marginBottom="2dp"
            android:background="@drawable/boton_guaca"
            android:onClick="abrirEcoCampus"
            android:text="@string/boton_ecocampus"
            android:textColor="@color/ColorBoton"
            tools:text="Explorar Ecocampus" />

        <Button
            android:id="@+id/buttonCompartir"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"

            android:layout_marginBottom="4dp"
            android:background="@drawable/boton_guaca"
            android:onClick="abrirInstagram"
            android:text="@string/boton_rrss"
            android:textColor="@color/ColorBoton"
            tools:text="Compartir Instagram" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>